--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,21 +1,17 @@
 events { }
 
 http {
-    upstream wordpress_backend {
-        server wordpress1:80;
-        server wordpress2:80;
-        server wordpress3:80;
+    upstream wordpress {
+        server wordpress-1:80;
+        server wordpress-2:80;
+        server wordpress-3:80;
     }
 
     server {
         listen 81;
 
         location / {
-            proxy_pass http://wordpress_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://wordpress;
         }
 
         # Manejo de errores
